// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pip-services.users.orgroles.version1";
option java_outer_classname = "OrgRolesProtoV1";
option objc_class_prefix = "ORG_ROLES_CMD_V1";

package orgroles_v1;

message ErrorDescription {
  string type = 1;
  string category = 2;
  string code = 3;
  string correlation_id = 4;
  string status = 5;
  string message = 6;
  string cause = 7;
  string stack_trace = 8;
  map<string, string> details = 9;
}

message PagingParams {
    int64 skip = 1;
    int32 take = 2;
    bool total = 3;
}

message UserRoles {
    string id = 1;
    string update_time = 2;
    repeated string roles = 3;
}

// The roles service definition.
service OrgRoles {
  rpc get_organization_admins (OrgIdRequest) returns (UserIdsReply) {}
  rpc get_organization_users (OrgIdRequest) returns (UserIdsReply) {}
  rpc get_organization_user_roles (RolesListRequest) returns (RolesListReply) {}
  rpc grant_org_role (UserRoleRequest) returns (RolesReply) {}
  rpc revoke_org_role (UserRoleRequest) returns (RolesReply) {}
  rpc grant_demo_organization_user_role (DemoOrganizationRequest) returns (OrgIdReply) {}
}

// The request message containing the organization id request.
message OrgIdRequest {
  string correlation_id = 1;
  string org_id = 2;
}

// The response message containing the user ids response
message UserIdsReply {
  ErrorDescription error = 1;
  repeated string user_ids = 2;
}

// The request message containing the user roles request.
message RolesListRequest {
  string correlation_id = 1;
  string org_id = 2;
  PagingParams paging = 3;
}

// The response message containing the user roles response
message RolesListReply {
  ErrorDescription error = 1;
  repeated UserRoles user_roles = 2;
}

// The request message containing the user role request.
message UserRoleRequest {
  string correlation_id = 1;
  string org_id = 2;
  string user_id = 3;
  string user_role = 4;
}

// The response message containing the roles response
message RolesReply {
  ErrorDescription error = 1;
  repeated string roles = 2;
}

// The request message containing the demo organization request.
message DemoOrganizationRequest {
  string correlation_id = 1;
  string user_id = 2;
  string language = 3;
}

// The response message containing the organization id response
message OrgIdReply {
  ErrorDescription error = 1;
  string org_id = 2;
}

